--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+  <h1>Security System Demo Server</h1>
+  <p>Server to test DeviceMessage-Endpoint</p>
 </body>
 
 </html>
